# IBMulator

./: .gitignore  BUILD_LINUX.md  BUILD_WINDOWS.md  CNAME  KEYMAPS.md  Makefile.am  Makefile.in  README.md  SHADERS.md  aclocal.m4  config.h.in  configure  configure.ac  gh-fork-ribbon.css  ibmulator.xcf  index.html  libtool  perfect_dos_vga_437_win-webfont.eot  renderdoc.cap  style.css
docs/: BUILD_LINUX.md  BUILD_WINDOWS.md  KEYMAPS.md  SHADERS.md  USAGE.md
m4/: freetype.m4  libarchive.m4  libespeakng.m4  libpng.m4  librocket.m4  libsamplerate.m4  nvda.m4  opengl.m4  rmlui.m4  sdl.m4  zlib.m4
share/applications/: ibmulator.desktop
share/ibmulator/: .gitignore  keymap.map  phones.txt
share/ibmulator/extra/: CD-ROM_drivers.img  CMOSDUMP.C  FDDTEST.C  HDDTEST.C  MEMDUMP.C  README  ROMDUMP.C  (+5 more)
src/: .gitignore  Makefile.am  Makefile.in  appconfig.cpp  appconfig.h  bench.cpp  bench.h  chrono.cpp  chrono.h  circular_fifo.h  fatreader.cpp  fatreader.h  filesys.cpp  filesys.h  hwbench.cpp  hwbench.h  ibmulator.h  ibmulator.rc  ibmulator.res  ini.cpp  ini.h  interval_tree.h  keys.h  machine.cpp  machine.h  main.cpp  md5.cpp  md5.h  mixer.cpp  mixer.h  model.cpp  model.h  pacer.cpp  pacer.h  program.cpp  program.h  riff.cpp  riff.h  ring_buffer.cpp  ring_buffer.h  (+18 more)
src/audio/: Makefile.am  audiobuffer.cpp  audiobuffer.h  audiospec.cpp  audiospec.h  convert.cpp  convert.h  midi.cpp  midi.h  mididev.cpp  mididev.h  mididev_alsa.cpp  mididev_alsa.h  mididev_win32.cpp  mididev_win32.h  midifile.cpp  midifile.h  mixerchannel.cpp  mixerchannel.h  mverb.h  ring_buffer.cpp  ring_buffer.h  soundfx.cpp  soundfx.h  synth.cpp  synth.h  vgm.cpp  vgm.h  wav.cpp  wav.h
src/audio/bs2b/: bs2b.c  bs2b.h  bs2bclass.cpp  bs2bclass.h
src/audio/chorus/: Chorus.cpp  Chorus.h  ChorusEngine.h  DCBlock.h  Lfo.cpp  Lfo.h  OnePoleLP.h  OscNoise.h
src/audio/decoders/: SDL_sound.c  SDL_sound.h  SDL_sound_flac.c  SDL_sound_internal.h  SDL_sound_mp3.c  SDL_sound_vorbis.c  SDL_sound_wav.c
src/audio/dsp/: Biquad.cpp  Biquad.h  Butterworth.cpp  Butterworth.h  Cascade.cpp  Cascade.h  Dsp.h  Filter.cpp  Filter.h  Layout.h  MathSupplement.h  Param.cpp  Params.h  PoleFilter.cpp  PoleFilter.h  RootFinder.cpp  RootFinder.h  State.h  Utilities.h
src/gui/: Makefile.am  Makefile.in  format.cpp  format.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_shader_chain.cpp  gl_shader_chain.h  gl_shader_pass.cpp  gl_shader_pass.h  gl_shader_program.cpp  gl_shader_program.h  gl_texture.cpp  gl_texture.h  gui.cpp  gui.h  gui_opengl.cpp  gui_opengl.h  gui_sdl2d.cpp  gui_sdl2d.h  guifx.cpp  guifx.h  keymap.cpp  keymap.h  keytables.cpp  matrix.cpp  matrix.h  matrix.inl.h  medium_info.h  opengl.cpp  opengl.h  screen_renderer.h  screen_renderer_opengl.cpp  screen_renderer_opengl.h  screen_renderer_sdl2d.cpp  screen_renderer_sdl2d.h  sdlkeys.h  shader_exception.cpp  shader_exception.h  shader_preset.cpp  (+24 more)
src/gui/capture/: avi.cpp  avi.h  capture.cpp  capture.h  capture_imgseq.cpp  capture_imgseq.h  capture_target.h  capture_videofile.cpp  capture_videofile.h  videoencoder.h  videoencoder_bmp.cpp  videoencoder_bmp.h  videoencoder_mpng.cpp  videoencoder_mpng.h  videoencoder_zmbv.cpp  videoencoder_zmbv.h  videoframe.h
src/gui/rml/: file_interface.cpp  file_interface.h  rend_interface.cpp  rend_interface.h  rend_interface_opengl.cpp  rend_interface_opengl.h  rend_interface_sdl2d.cpp  rend_interface_sdl2d.h  sys_interface.cpp  sys_interface.h
src/gui/rocket/: Makefile.am  Makefile.in  file_interface.cpp  file_interface.h  rend_interface.cpp  rend_interface.h  rend_interface_opengl.cpp  rend_interface_opengl.h  rend_interface_sdl2d.cpp  rend_interface_sdl2d.h  sys_interface.cpp  sys_interface.h
src/gui/windows/: audio_osd.cpp  audio_osd.h  debugtools.cpp  debugtools.h  desktop.cpp  desktop.h  devstatus.cpp  devstatus.h  fileselect.cpp  fileselect.h  interface.cpp  interface.h  interface_fx.cpp  interface_fx.h  interface_screen.cpp  interface_screen.h  items_dialog.cpp  items_dialog.h  message_box.cpp  message_box.h  message_wnd.cpp  message_wnd.h  mixer_control.cpp  mixer_control.h  mixer_save_info.cpp  mixer_save_info.h  mixerstate.cpp  mixerstate.h  new_floppy.cpp  new_floppy.h  normal_interface.cpp  normal_interface.h  printer_control.cpp  printer_control.h  realistic_interface.cpp  realistic_interface.h  screen_renderer.h  screen_renderer_opengl.cpp  screen_renderer_opengl.h  screen_renderer_sdl2d.cpp  (+23 more)
src/hardware/: Makefile.am  Makefile.in  cpu.cpp  cpu.h  devices.cpp  devices.h  iodevice.cpp  iodevice.h  memory.cpp  memory.h  systemrom.cpp  systemrom.h
src/hardware/cpu/: bus.cpp  bus.h  core.cpp  core.h  debugger.cpp  debugger.h  decoder.cpp  decoder.h  descriptor.h  disasm.cpp  disasm.h  exception.h  executor.cpp  executor.h  executor_fn.h  logger.cpp  logger.h  mmu.cpp  mmu.h  selector.h  state.h
src/hardware/cpu/debugger/: int_decoders.cpp  int_map.cpp  int_strings.cpp
src/hardware/cpu/decoder/: cycles.cpp  prefix_0F.cpp  prefix_0F_32.cpp  prefix_none.cpp  prefix_none_32.cpp
src/hardware/cpu/executor/: access.cpp  calls.cpp  ctrlxfer.cpp  flags.cpp  interrupts.cpp  memory.cpp  modrm.cpp  opcodes.cpp  paging.cpp  stack.cpp  tasks.cpp
src/hardware/devices/: adlib.cpp  adlib.h  cdrom.h  cdrom_disc.cpp  cdrom_disc.h  cdrom_drive.cpp  cdrom_drive.h  cdrom_events.h  cdrom_fx.cpp  cdrom_fx.h  cdrom_loader.cpp  cdrom_loader.h  cf62011bpc.cpp  cf62011bpc.h  cmos.cpp  cmos.h  dma.cpp  dma.h  drivefx.cpp  drivefx.h  floppy.cpp  floppy.h  floppyctrl.cpp  floppyctrl.h  floppyctrl_flux.cpp  floppyctrl_flux.h  floppyctrl_raw.cpp  floppyctrl_raw.h  floppydisk.cpp  floppydisk.h  floppydisk_raw.cpp  floppydisk_raw.h  floppydrive.cpp  floppydrive.h  floppyevents.h  floppyfmt.cpp  floppyfmt.h  floppyfmt_86f.cpp  floppyfmt_86f.h  floppyfmt_hfe.cpp  (+98 more)
src/hardware/printer/: mps_chargen.cpp  mps_charset.cpp  mps_printer.cpp  mps_printer.h  mps_printer_epson.cpp  mps_printer_ibmgp.cpp  mps_printer_ibmpp.cpp
src/ini/: ini.cpp  ini.h
src/stb/: stb.cpp  stb.h
src/wincompat/: asprintf.cpp  mkstemp.cpp  realpath.cpp  utf8.cpp  utf8.h
(+127 files in other folders)
