SUBDIRS = src

ACLOCAL_AMFLAGS = -I m4

dist_pkgdata_DATA = \
share/ibmulator/icon.ico \
share/ibmulator/icon.png \
share/ibmulator/cmos_ps1_2011.bin \
share/ibmulator/cmos_ps1_2121.bin \
share/ibmulator/disk_images.zip \
share/ibmulator/keymap.map

guidir = $(pkgdatadir)/gui
dist_gui_DATA = \
share/ibmulator/gui/base.rcss \
share/ibmulator/gui/buttons.rcss \
share/ibmulator/gui/debugger.rcss \
share/ibmulator/gui/debugger286.rcss \
share/ibmulator/gui/debugger286.rml \
share/ibmulator/gui/debugger386.rcss \
share/ibmulator/gui/debugger386.rml \
share/ibmulator/gui/debugtools.rml \
share/ibmulator/gui/default.rcss \
share/ibmulator/gui/default.rml \
share/ibmulator/gui/desktop.rml \
share/ibmulator/gui/devstatus.rml \
share/ibmulator/gui/dialog.rcss \
share/ibmulator/gui/fileselect_grid.rcss \
share/ibmulator/gui/fileselect_list.rcss \
share/ibmulator/gui/fileselect.rcss \
share/ibmulator/gui/fileselect.rml \
share/ibmulator/gui/message_wnd.rml \
share/ibmulator/gui/mixerstate.rml \
share/ibmulator/gui/new_floppy.rml \
share/ibmulator/gui/normal_interface.rcss \
share/ibmulator/gui/normal_interface.rml \
share/ibmulator/gui/printer_control.rml \
share/ibmulator/gui/realistic_interface.rcss \
share/ibmulator/gui/realistic_interface.rml \
share/ibmulator/gui/speed_indicator.rcss \
share/ibmulator/gui/state_dialog.rcss \
share/ibmulator/gui/state_dialog.rml \
share/ibmulator/gui/state_dialog_grid.rcss \
share/ibmulator/gui/state_dialog_list.rcss \
share/ibmulator/gui/state_load.rml \
share/ibmulator/gui/state_save.rml \
share/ibmulator/gui/state_save_info.rml \
share/ibmulator/gui/stats.rml \
share/ibmulator/gui/status.rml \
share/ibmulator/gui/shader_parameters.rml

guiiconsdir = $(pkgdatadir)/gui/icons
dist_guiicons_DATA = \
share/ibmulator/gui/icons/arrow_left.png \
share/ibmulator/gui/icons/arrow_right.png \
share/ibmulator/gui/icons/arrow_up.png \
share/ibmulator/gui/icons/ascending.png \
share/ibmulator/gui/icons/buttonA.png \
share/ibmulator/gui/icons/buttonB.png \
share/ibmulator/gui/icons/cross.png \
share/ibmulator/gui/icons/descending.png \
share/ibmulator/gui/icons/disk.png \
share/ibmulator/gui/icons/disk_active.png \
share/ibmulator/gui/icons/dotted_grip_corner.png \
share/ibmulator/gui/icons/down.png \
share/ibmulator/gui/icons/eject.png \
share/ibmulator/gui/icons/exit.png \
share/ibmulator/gui/icons/file_select.png \
share/ibmulator/gui/icons/grid.png \
share/ibmulator/gui/icons/floppy-5.25-c.png \
share/ibmulator/gui/icons/floppy-5.25-c-active.png \
share/ibmulator/gui/icons/hdd-c.png \
share/ibmulator/gui/icons/hdd-c-active.png \
share/ibmulator/gui/icons/home.png \
share/ibmulator/gui/icons/info.png \
share/ibmulator/gui/icons/list.png \
share/ibmulator/gui/icons/pause.png \
share/ibmulator/gui/icons/printer.png \
share/ibmulator/gui/icons/power.png \
share/ibmulator/gui/icons/power_active.png \
share/ibmulator/gui/icons/reload.png \
share/ibmulator/gui/icons/restore.png \
share/ibmulator/gui/icons/restore_up.png \
share/ibmulator/gui/icons/resume.png \
share/ibmulator/gui/icons/resume_active.png \
share/ibmulator/gui/icons/save.png \
share/ibmulator/gui/icons/save_down.png \
share/ibmulator/gui/icons/trashcan.png \
share/ibmulator/gui/icons/trashcan_open.png \
share/ibmulator/gui/icons/up.png \
share/ibmulator/gui/icons/warning.png

guiiconsdebuggerdir = $(pkgdatadir)/gui/icons/debugger
dist_guiiconsdebugger_DATA = \
share/ibmulator/gui/icons/debugger/control_power.png \
share/ibmulator/gui/icons/debugger/control_pause.png \
share/ibmulator/gui/icons/debugger/control_run.png \
share/ibmulator/gui/icons/debugger/cpu_breakp.png \
share/ibmulator/gui/icons/debugger/cpu_skip.png \
share/ibmulator/gui/icons/debugger/cpu_step.png \
share/ibmulator/gui/icons/debugger/memory_dump.png \
share/ibmulator/gui/icons/debugger/processor_dump.png \
share/ibmulator/gui/icons/debugger/processor_rec.png \
share/ibmulator/gui/icons/debugger/state_restore.png \
share/ibmulator/gui/icons/debugger/state_save.png \
share/ibmulator/gui/icons/debugger/update.png

guiimagesdir = $(pkgdatadir)/gui/images
dist_guiimages_DATA = \
share/ibmulator/gui/images/drives.png \
share/ibmulator/gui/images/romshell_button.png \
share/ibmulator/gui/images/romshell_datagridcell.png \
share/ibmulator/gui/images/romshell_datagrid.png \
share/ibmulator/gui/images/romshell_datagrid_rl.png \
share/ibmulator/gui/images/romshell_scroller.png \
share/ibmulator/gui/images/sysunit_3_5_disk_g.png \
share/ibmulator/gui/images/sysunit_3_5_disk_r.png \
share/ibmulator/gui/images/sysunit_3_5_no_disk.png \
share/ibmulator/gui/images/sysunit_5_25_disk_r.png \
share/ibmulator/gui/images/sysunit_5_25_no_disk.png \
share/ibmulator/gui/images/realistic_interface.png \
share/ibmulator/gui/images/realistic_floppy_r.png \
share/ibmulator/gui/images/realistic_reflection.png \
share/ibmulator/gui/images/realistic_slider.png \
share/ibmulator/gui/images/realistic_fdd_led_bloom.png \
share/ibmulator/gui/images/realistic_floppy_r_dark.png \
share/ibmulator/gui/images/realistic_hdd_led_bloom.png \
share/ibmulator/gui/images/realistic_interface_dark.png \
share/ibmulator/gui/images/realistic_interface_nomonitor.png \
share/ibmulator/gui/images/realistic_interface_nomonitor_dark.png \
share/ibmulator/gui/images/realistic_power_led_bloom.png \
share/ibmulator/gui/images/realistic_slider_dark.png

guishadersdir = $(pkgdatadir)/shaders
dist_guishaders_DATA = \
share/ibmulator/shaders/common/color_functions.glsl \
share/ibmulator/shaders/common/black_fill.slang \
share/ibmulator/shaders/common/black_fill.slangp \
share/ibmulator/shaders/common/fb_blitter.slang \
share/ibmulator/shaders/common/filter_bilinear.slang \
share/ibmulator/shaders/common/filter_bicubic.slang \
share/ibmulator/shaders/common/filter_bicubic.glsl \
share/ibmulator/shaders/normal_mode/stock.slangp \
share/ibmulator/shaders/normal_mode/stock.slang \
share/ibmulator/shaders/normal_mode/nearest_filter.slangp \
share/ibmulator/shaders/normal_mode/bicubic_filter.slangp \
share/ibmulator/shaders/realistic_mode/stock.slang \
share/ibmulator/shaders/realistic_mode/stock.slangp \
share/ibmulator/shaders/gui/color.slang \
share/ibmulator/shaders/gui/texture.slang \
share/ibmulator/shaders/ps1/monitor.slangp \
share/ibmulator/shaders/ps1/monitor.slang \
share/ibmulator/shaders/ps1/crt.slang \
share/ibmulator/shaders/ps1/vga_reflection.slang \
share/ibmulator/shaders/ps1/functions.glsl \
share/ibmulator/shaders/ps1/texture/power_led_bloom.png \
share/ibmulator/shaders/ps1/texture/glass_envmap.png \
share/ibmulator/shaders/ps1/texture/monitor_frame.png \
share/ibmulator/shaders/crt/lottes.slang \
share/ibmulator/shaders/crt/lottes.slangp

guifontsdir = $(pkgdatadir)/gui/fonts
dist_guifonts_DATA = \
share/ibmulator/gui/fonts/Nouveau_IBM_Stretch.ttf \
share/ibmulator/gui/fonts/Nouveau_IBM.ttf \
share/ibmulator/gui/fonts/ProFontWindows-LICENSE \
share/ibmulator/gui/fonts/ProFontWindows-readme.txt \
share/ibmulator/gui/fonts/ProFontWindows.ttf \
share/ibmulator/gui/fonts/Ubuntu-Regular.ttf \
share/ibmulator/gui/fonts/Ubuntu-Bold.ttf \
share/ibmulator/gui/fonts/UFL.txt

soundsfloppydir = $(pkgdatadir)/sounds/floppy
dist_soundsfloppy_DATA = \
share/ibmulator/sounds/floppy/5_25_disk_insert.wav \
share/ibmulator/sounds/floppy/5_25_disk_eject.wav \
share/ibmulator/sounds/floppy/5_25_drive_spin.wav \
share/ibmulator/sounds/floppy/5_25_drive_spin_start.wav \
share/ibmulator/sounds/floppy/5_25_drive_spin_stop.wav \
share/ibmulator/sounds/floppy/5_25_drive_seek_step.wav \
share/ibmulator/sounds/floppy/5_25_drive_seek_up.wav \
share/ibmulator/sounds/floppy/5_25_drive_seek_down.wav \
share/ibmulator/sounds/floppy/3_5_disk_insert.wav \
share/ibmulator/sounds/floppy/3_5_disk_eject.wav \
share/ibmulator/sounds/floppy/3_5_drive_spin.wav \
share/ibmulator/sounds/floppy/3_5_drive_spin_start.wav \
share/ibmulator/sounds/floppy/3_5_drive_spin_stop.wav \
share/ibmulator/sounds/floppy/3_5_drive_seek_step.wav \
share/ibmulator/sounds/floppy/3_5_drive_seek_up.wav \
share/ibmulator/sounds/floppy/3_5_drive_seek_down.wav \
share/ibmulator/sounds/floppy/3_5_drive_snatch.wav \
share/ibmulator/sounds/floppy/3_5_drive_boot.wav \
share/ibmulator/sounds/floppy/3_5_drive_boot_disk.wav

soundshdddir = $(pkgdatadir)/sounds/hdd
dist_soundshdd_DATA = \
share/ibmulator/sounds/hdd/drive_spin_up.wav \
share/ibmulator/sounds/hdd/drive_spin_down.wav \
share/ibmulator/sounds/hdd/drive_spin.wav \
share/ibmulator/sounds/hdd/drive_seek.wav \
share/ibmulator/sounds/hdd/drive_seek_long.wav

soundssysdir = $(pkgdatadir)/sounds/system
dist_soundssys_DATA = \
share/ibmulator/sounds/system/power_up.wav \
share/ibmulator/sounds/system/power_down.wav \
share/ibmulator/sounds/system/power_on.wav

extraprogsdir = $(pkgdatadir)/extra
dist_extraprogs_DATA = \
share/ibmulator/extra/CMOSDUMP.C \
share/ibmulator/extra/CMOSDUMP.EXE \
share/ibmulator/extra/COPYING \
share/ibmulator/extra/README \
share/ibmulator/extra/ROMDUMP.C \
share/ibmulator/extra/ROMDUMP.EXE \
share/ibmulator/extra/SPKRTONE.C \
share/ibmulator/extra/SPKRTONE.EXE \
share/ibmulator/extra/SPKRWAV.C \
share/ibmulator/extra/SPKRWAV.EXE \
share/ibmulator/extra/HDDTEST.C \
share/ibmulator/extra/FDDTEST.C \
share/ibmulator/extra/MEMDUMP.C \
share/ibmulator/extra/MEMDUMP.EXE

EXTRA_DIST = README.md